--- a/index.html
+++ b/index.html
@@ -8,63 +8,69 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+  <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
   <title>Abhishek Anand</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">My Portfolio</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">My Portfolio</a>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about.html">Skills</a>
-        </li>
+  <button class="navbar-toggler" type="button" data-toggle="collapse"
+    data-target="#navbarSupportedContent">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-        <li class="nav-item">
-          <a class="nav-link" href="./project.html">Projects</a>
-        </li>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            Contact
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="mailto:singhabhi6377@gmail.com">Email</a>
-            <a class="dropdown-item" href="https://github.com/AbhiSingh924">GitHub</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="www.linkedin.com/in/anand29abhishek">Linkdin</a>
-            <a class="dropdown-item" href="https://www.naukri.com/mnjuser/profile?id=&altresid">Naukri</a>
-          </div>
-        </li>
+    <!-- LEFT MENU -->
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home</a>
+      </li>
 
+      <li class="nav-item">
+        <a class="nav-link" href="/skills.html">Skills</a>
+      </li>
 
+      <li class="nav-item">
+        <a class="nav-link" href="./project.html">Projects</a>
+      </li>
 
-      </ul>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+          role="button" data-toggle="dropdown">
+          Contact
+        </a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" href="mailto:singhabhi6377@gmail.com">Email</a>
+          <a class="dropdown-item" href="https://github.com/AbhiSingh924" target="_blank">GitHub</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="https://www.linkedin.com/in/anand29abhishek" target="_blank">LinkedIn</a>
+          <a class="dropdown-item" href="https://www.naukri.com/">Naukri</a>
+        </div>
+      </li>
+    </ul>
+
+    <!-- RIGHT RESUME BUTTON -->
+    <div class="ml-auto">
+      <a href="./assets/Abhishek Anand Resume.pdf"
+         class="btn btn-outline-success"
+         download>
+        <i class="fas fa-download mr-2"></i>Download Resume
+      </a>
     </div>
-  </nav>
 
-
-
-
-
-
+  </div>
+</nav>
 
   <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-      <!-- <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="4"></li> -->
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
